syntax = "proto3";

service datamover {
	rpc Runjob(RunJobRequest) returns (RunJobResponse) {}
	rpc DoLifecycleAction(LifecycleActionRequest) returns (LifecycleActionResonse) {}
}

message KV {
	string key = 1;
	string value = 2;
}

message Filter {
	string prefix = 1;
	repeated KV tag = 2;
}

message Connector {
	string Type = 1; //opensds,aws,azure,hwcloud,etc.
	string BucketName = 2;
	repeated KV ConnConfig = 3;
}

message RunJobRequest{
	string id = 1;
	Connector sourceConn = 2;
	Connector destConn = 3;
	Filter filt = 4;
	bool remainSource = 5;
}

message RunJobResponse {
	string err = 1;
}

message LifecycleActionRequest {
	string objKey = 1;
	string bucketName = 2;
	int32 action = 3;
	int32 sourceTier = 4;
	int32 targetTier = 5;
	string sourceBackend = 6;
	string targetBackend = 7;
	int64 objSize = 8;
	int64 lastModified = 9;
}

message LifecycleActionResonse {
	string err = 1;
}